--- a/portfolio.html
+++ b/portfolio.html
@@ -137,16 +137,34 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <!--                   <img
-                    src="./images/portfolio2.jpg"
-                    alt="Постер New Orlean vs Golden Star"
-                    width="370"
-                  /> -->
-
                   <picture class="picture">
-                    <source srcset="./images/portfolio-2-370.jpg" media="(min-width: 1200px)" />
-                    <source srcset="./images/portfolio-2-354.jpg" media="(min-width: 768px)" />
-                    <source srcset="./images/portfolio-2-450.jpg" media="(min-width: 480px)" />
+                    <source
+                      srcset="./images/portfolio-2-370.jpg 1x, ./images/portfolio-2-370@2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-2-370.webp 1x, ./images/portfolio-2-370@2x.webp 2x"
+                      media="(min-width: 1200px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-2-354.jpg 1x, ./images/portfolio-2-354@2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-2-354.webp 1x, ./images/portfolio-2-354@2x.webp 2x"
+                      media="(min-width: 768px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-2-450.jpg 1x, ./images/portfolio-2-450@2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-2-450.webp 1x, ./images/portfolio-2-450@2x.webp 2x"
+                      media="(min-width: 480px)"
+                      type="image/webp"
+                    />
                     <img
                       class="projects__pic"
                       src="./images/portfolio-2-450.jpg"
@@ -169,16 +187,34 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <!--                   <img
-                    src="./images/portfolio3.jpg"
-                    alt="Ресторан Seafood - приложение"
-                    width="370"
-                  /> -->
-
                   <picture class="picture">
-                    <source srcset="./images/portfolio-3-370.jpg" media="(min-width: 1200px)" />
-                    <source srcset="./images/portfolio-3-354.jpg" media="(min-width: 768px)" />
-                    <source srcset="./images/portfolio-3-450.jpg" media="(min-width: 480px)" />
+                    <source
+                      srcset="./images/portfolio-3-370.jpg 1x, ./images/portfolio-3-370@2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-3-370.webp 1x, ./images/portfolio-3-370@2x.webp 2x"
+                      media="(min-width: 1200px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-3-354.jpg 1x, ./images/portfolio-3-354@2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-3-354.webp 1x, ./images/portfolio-3-354@2x.webp 2x"
+                      media="(min-width: 768px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-3-450.jpg 1x, ./images/portfolio-3-450@2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-3-450.webp 1x, ./images/portfolio-3-450@2x.webp 2x"
+                      media="(min-width: 480px)"
+                      type="image/webp"
+                    />
                     <img
                       class="projects__pic"
                       src="./images/portfolio-3-450.jpg"
@@ -201,12 +237,34 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <!--                   <img src="./images/portfolio4.jpg" alt="Проект Prime" width="370" /> -->
-
                   <picture class="picture">
-                    <source srcset="./images/portfolio-4-370.jpg" media="(min-width: 1200px)" />
-                    <source srcset="./images/portfolio-4-354.jpg" media="(min-width: 768px)" />
-                    <source srcset="./images/portfolio-4-450.jpg" media="(min-width: 480px)" />
+                    <source
+                      srcset="./images/portfolio-4-370.jpg 1x, ./images/portfolio-4-370@2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-4-370.webp 1x, ./images/portfolio-4-370@2x.webp 2x"
+                      media="(min-width: 1200px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-4-354.jpg 1x, ./images/portfolio-4-354@2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-4-354.webp 1x, ./images/portfolio-4-354@2x.webp 2x"
+                      media="(min-width: 768px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-4-450.jpg 1x, ./images/portfolio-4-450@2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-4-450.webp 1x, ./images/portfolio-4-450@2x.webp 2x"
+                      media="(min-width: 480px)"
+                      type="image/webp"
+                    />
                     <img
                       class="projects__pic"
                       src="./images/portfolio-4-450.jpg"
@@ -229,12 +287,34 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <!-- <img src="./images/portfolio5.jpg" alt="Проект Boxes - приложение" width="370" /> -->
-
                   <picture class="picture">
-                    <source srcset="./images/portfolio-5-370.jpg" media="(min-width: 1200px)" />
-                    <source srcset="./images/portfolio-5-354.jpg" media="(min-width: 768px)" />
-                    <source srcset="./images/portfolio-5-450.jpg" media="(min-width: 480px)" />
+                    <source
+                      srcset="./images/portfolio-5-370.jpg 1x, ./images/portfolio-5-370@2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-5-370.webp 1x, ./images/portfolio-5-370@2x.webp 2x"
+                      media="(min-width: 1200px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-5-354.jpg 1x, ./images/portfolio-5-354@2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-5-354.webp 1x, ./images/portfolio-5-354@2x.webp 2x"
+                      media="(min-width: 768px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-5-450.jpg 1x, ./images/portfolio-5-450@2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-5-450.webp 1x, ./images/portfolio-5-450@2x.webp 2x"
+                      media="(min-width: 480px)"
+                      type="image/webp"
+                    />
                     <img
                       class="projects__pic"
                       src="./images/portfolio-5-450.jpg"
@@ -257,16 +337,34 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <!--                   <img
-                    src="./images/portfolio6.jpg"
-                    alt="Inspiration has no Borders - Веб сайт"
-                    width="370"
-                  /> -->
-
                   <picture class="picture">
-                    <source srcset="./images/portfolio-6-370.jpg" media="(min-width: 1200px)" />
-                    <source srcset="./images/portfolio-6-354.jpg" media="(min-width: 768px)" />
-                    <source srcset="./images/portfolio-6-450.jpg" media="(min-width: 480px)" />
+                    <source
+                      srcset="./images/portfolio-6-370.jpg 1x, ./images/portfolio-6-370@2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-6-370.webp 1x, ./images/portfolio-6-370@2x.webp 2x"
+                      media="(min-width: 1200px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-6-354.jpg 1x, ./images/portfolio-6-354@2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-6-354.webp 1x, ./images/portfolio-6-354@2x.webp 2x"
+                      media="(min-width: 768px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-6-450.jpg 1x, ./images/portfolio-6-450@2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-6-450.webp 1x, ./images/portfolio-6-450@2x.webp 2x"
+                      media="(min-width: 480px)"
+                      type="image/webp"
+                    />
                     <img
                       class="projects__pic"
                       src="./images/portfolio-6-450.jpg"
@@ -289,12 +387,34 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <!-- <img src="./images/portfolio7.jpg" alt="Издание Limited Edition" width="370" /> -->
-
                   <picture class="picture">
-                    <source srcset="./images/portfolio-7-370.jpg" media="(min-width: 1200px)" />
-                    <source srcset="./images/portfolio-7-354.jpg" media="(min-width: 768px)" />
-                    <source srcset="./images/portfolio-7-450.jpg" media="(min-width: 480px)" />
+                    <source
+                      srcset="./images/portfolio-7-370.jpg 1x, ./images/portfolio-7-370@2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-7-370.webp 1x, ./images/portfolio-7-370@2x.webp 2x"
+                      media="(min-width: 1200px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-7-354.jpg 1x, ./images/portfolio-7-354@2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-7-354.webp 1x, ./images/portfolio-7-354@2x.webp 2x"
+                      media="(min-width: 768px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-7-450.jpg 1x, ./images/portfolio-7-450@2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-7-450.webp 1x, ./images/portfolio-7-450@2x.webp 2x"
+                      media="(min-width: 480px)"
+                      type="image/webp"
+                    />
                     <img
                       class="projects__pic"
                       src="./images/portfolio-7-450.jpg"
@@ -317,12 +437,34 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <!--                   <img src="./images/portfolio8.jpg" alt="Проект LAB" width="370" /> -->
-
                   <picture class="picture">
-                    <source srcset="./images/portfolio-8-370.jpg" media="(min-width: 1200px)" />
-                    <source srcset="./images/portfolio-8-354.jpg" media="(min-width: 768px)" />
-                    <source srcset="./images/portfolio-8-450.jpg" media="(min-width: 480px)" />
+                    <source
+                      srcset="./images/portfolio-8-370.jpg 1x, ./images/portfolio-8-370@2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-8-370.webp 1x, ./images/portfolio-8-370@2x.webp 2x"
+                      media="(min-width: 1200px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-8-354.jpg 1x, ./images/portfolio-8-354@2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-8-354.webp 1x, ./images/portfolio-8-354@2x.webp 2x"
+                      media="(min-width: 768px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-8-450.jpg 1x, ./images/portfolio-8-450@2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-8-450.webp 1x, ./images/portfolio-8-450@2x.webp 2x"
+                      media="(min-width: 480px)"
+                      type="image/webp"
+                    />
                     <img
                       class="projects__pic"
                       src="./images/portfolio-8-450.jpg"
@@ -345,16 +487,34 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <!--                   <img
-                    src="./images/portfolio9.jpg"
-                    alt="Growing Business - приложение"
-                    width="370"
-                  /> -->
-
                   <picture class="picture">
-                    <source srcset="./images/portfolio-9-370.jpg" media="(min-width: 1200px)" />
-                    <source srcset="./images/portfolio-9-354.jpg" media="(min-width: 768px)" />
-                    <source srcset="./images/portfolio-9-450.jpg" media="(min-width: 480px)" />
+                    <source
+                      srcset="./images/portfolio-9-370.jpg 1x, ./images/portfolio-9-370@2x.jpg 2x"
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-9-370.webp 1x, ./images/portfolio-9-370@2x.webp 2x"
+                      media="(min-width: 1200px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-9-354.jpg 1x, ./images/portfolio-9-354@2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-9-354.webp 1x, ./images/portfolio-9-354@2x.webp 2x"
+                      media="(min-width: 768px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-9-450.jpg 1x, ./images/portfolio-9-450@2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-9-450.webp 1x, ./images/portfolio-9-450@2x.webp 2x"
+                      media="(min-width: 480px)"
+                      type="image/webp"
+                    />
                     <img
                       class="projects__pic"
                       src="./images/portfolio-9-450.jpg"
