add pics x2 and webp

--- a/index.html
+++ b/index.html
@@ -120,24 +120,64 @@
           <ul class="our-job__list">
             <li class="our-job__element">
               <picture class="picture">
-                <source srcset="./images/our-job-1.jpg" media="(min-width: 1200px)" />
-                <img src="#" alt="Десктопные приложения" width="370" height="294" />
+                <source
+                  srcset="./images/our-job-1.jpg 1x, ./images/our-job-1@2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/our-job-1.webp 1x, ./images/our-job-1@2x.webp 2x"
+                  media="(min-width: 1200px)"
+                  type="image/webp"
+                />
+
+                <img
+                  src="./images/our-job-1.jpg"
+                  alt="Десктопные приложения"
+                  width="370"
+                  height="294"
+                />
               </picture>
               <!--  <img src="./images/our-job-1.jpg" alt="чем мы занимаемся" width="370" height="294" /> -->
               <p class="our-job__element-descr">Десктопные приложения</p>
             </li>
             <li class="our-job__element">
               <picture class="picture">
-                <source srcset="./images/our-job-2.jpg" media="(min-width: 1200px)" />
-                <img src="#" alt="Мобильные приложения" width="370" height="294" />
+                <source
+                  srcset="./images/our-job-2.jpg 1x, ./images/our-job-2@2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/our-job-2.webp 1x, ./images/our-job-2@2x.webp 2x"
+                  media="(min-width: 1200px)"
+                  type="image/webp"
+                />
+                <img
+                  src="./images/our-job-2.jpg"
+                  alt="Мобильные приложения"
+                  width="370"
+                  height="294"
+                />
               </picture>
               <!-- <img src="./images/our-job-2.jpg" alt="чем мы занимаемся" width="370" height="294" /> -->
               <p class="our-job__element-descr">Мобильные приложения</p>
             </li>
             <li class="our-job__element">
               <picture class="picture">
-                <source srcset="./images/our-job-3.jpg" media="(min-width: 1200px)" />
-                <img src="#" alt="Дизайнерские решения" width="370" height="294" />
+                <source
+                  srcset="./images/our-job-3.jpg 1x, ./images/our-job-3@2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/our-job-3.webp 1x, ./images/our-job-3@2x.webp 2x"
+                  media="(min-width: 1200px)"
+                  type="image/webp"
+                />
+                <img
+                  src="./images/our-job-3.jpg"
+                  alt="Дизайнерские решения"
+                  width="370"
+                  height="294"
+                />
               </picture>
               <!-- <img src="./images/our-job-3.jpg" alt="чем мы занимаемся" width="370" height="294" /> -->
               <p class="our-job__element-descr">Дизайнерские решения</p>
